--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+## Temp files
+*~
+*.backup
+
+
+## =======================================================
+## LaTeX
+## =======================================================
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
